--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "mits",
   "version": "0.1.0",
   "private": true,
- "scripts": {
-  "dev": "next dev --webpack",
-  "build": "next build && next export",
-  "start": "next start",
-  "export": "next export",
-  "lint": "eslint"
-}
-,
+  "scripts": {
+    "dev": "next dev --webpack",
+    "build": "next build && next export",
+    "start": "next start",
+    "export": "next export",
+    "lint": "eslint"
+  },
   "dependencies": {
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-phone-number-input": "^3.4.14"
   },
   "devDependencies": {
     "@types/node": "^20",
